--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,14 @@ name = "servo_media"
 
 [features]
 default = ["gst"]
-gst = ["gstreamer"]
+gst = ["gstreamer", "glib", "gst-plugin", "gstreamer-audio", "gstreamer-base"]
 
 [dependencies]
+glib = { version = "0.4", optional = true }
+gst-plugin = { version = "0.1", optional = true }
 gstreamer = { version = "0.10.2", optional = true }
+gstreamer-audio = { version = "0.10", optional = true }
+gstreamer-base = { version = "0.10.2", optional = true }
 
 [build-dependencies]
 regex = "0.2.10"
