--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,10 @@ crate-type = ["cdylib"]
 
 [features]
 default = ["gst"]
-gst = ["gstreamer", "glib", "gst-plugin", "gstreamer-audio", "gstreamer-base", "byte-slice-cast", "num-traits"]
+gst = ["gstreamer", "gst-plugin", "gstreamer-audio", "gstreamer-base", "byte-slice-cast", "num-traits"]
 
 [dependencies]
 byte-slice-cast = { version = "0.1", optional = true }
-glib = { version = "0.5", optional = true }
 gst-plugin = { version = "0.2", optional = true }
 gstreamer = { version = "0.11", optional = true }
 gstreamer-audio = { version = "0.11", optional = true }
