--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,11 @@ name = "servo_media"
 
 [features]
 default = ["gst"]
-gst = ["gstreamer", "gst-plugin", "gstreamer-audio", "gstreamer-base", "byte-slice-cast", "num-traits"]
+gst = ["gstreamer", "gst-plugin", "gstreamer-audio", "gstreamer-base", "byte-slice-cast", "num-traits", "glib"]
 
 [dependencies]
 byte-slice-cast = { version = "0.1", optional = true }
+glib = { version = "0.5", optional = true }
 gst-plugin = { version = "0.2", optional = true }
 gstreamer = { version = "0.11", optional = true }
 gstreamer-audio = { version = "0.11", optional = true }
