--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ name = "servo_media"
 
 [features]
 default = ["gst"]
-gst = ["gstreamer", "gst-plugin", "gstreamer-audio", "gstreamer-base", "byte-slice-cast", "num-traits", "glib"]
+gst = ["gstreamer", "gst-plugin", "gstreamer-audio", "gstreamer-app", "gstreamer-base", "byte-slice-cast", "num-traits", "glib"]
 
 [dependencies]
 byte-slice-cast = { version = "0.1", optional = true }
@@ -18,6 +18,7 @@ gst-plugin = { version = "0.2", optional = true }
 gstreamer = { version = "0.11", optional = true }
 gstreamer-audio = { version = "0.11", optional = true }
 gstreamer-base = { version = "0.11", optional = true }
+gstreamer-app = { version = "0.11.2", optional = true }
 num-traits = { version = "0.1", optional = true }
 
 [build-dependencies]
