--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,14 +15,6 @@ smallvec = "0.6.1"
 optional = true
 version = "0.1"
 
-[dependencies.glib]
-optional = true
-version = "0.5"
-
-[dependencies.gst-plugin]
-optional = true
-version = "0.2"
-
 [dependencies.gstreamer]
 optional = true
 version = "0.11"
@@ -35,17 +27,13 @@ version = "0.11.2"
 optional = true
 version = "0.11"
 
-[dependencies.gstreamer-base]
-optional = true
-version = "0.11"
-
 [dependencies.num-traits]
 optional = true
 version = "0.1"
 
 [features]
 default = ["gst"]
-gst = ["gstreamer", "gst-plugin", "gstreamer-audio", "gstreamer-app", "gstreamer-base", "byte-slice-cast", "num-traits", "glib"]
+gst = ["gstreamer", "gstreamer-audio", "gstreamer-app", "byte-slice-cast", "num-traits"]
 
 [lib]
 name = "servo_media"
