--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,9 @@ version = "0.11"
 optional = true
 version = "0.1"
 
+[dev-dependencies]
+rand = "0.5.0"
+
 [features]
 default = ["gst"]
 gst = ["gstreamer", "gstreamer-audio", "gstreamer-app", "byte-slice-cast", "num-traits"]
