--- a/backends/gstreamer/Cargo.toml
+++ b/backends/gstreamer/Cargo.toml
@@ -10,6 +10,12 @@ zip = "0.3.1"
 [dependencies.byte-slice-cast]
 version = "0.1"
 
+[dependencies.num-traits]
+version = "0.1"
+
+[dependencies.glib]
+version = "0.5"
+
 [dependencies.gstreamer]
 version = "0.11"
 
@@ -19,5 +25,11 @@ version = "0.11.2"
 [dependencies.gstreamer-audio]
 version = "0.11"
 
+[dependencies.gstreamer-player]
+version = "0.11"
+
 [dependencies.servo-media-audio]
 path = "../../audio"
+
+[dependencies.servo-media-player]
+path = "../../player"
