--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -5,7 +5,7 @@ license = "MPL-2.0"
 
 [dependencies]
 rand = "0.5.0"
-servo_media = { path = "../servo-media" }
+servo_media = { path = "../servo-media", features = ["gst"] }
 
 [[bin]]
 name = "audio_decoder"
@@ -26,7 +26,6 @@ path = "play.rs"
 [[bin]]
 name = "play_noise"
 path = "play_noise.rs"
-
 
 [[bin]]
 name = "channels"
