--- a/servo-media/Cargo.toml
+++ b/servo-media/Cargo.toml
@@ -9,16 +9,14 @@ regex = "1.0"
 zip = "0.3.1"
 
 [dependencies]
+byte-slice-cast = "0.1"
+num-traits = "0.1"
 smallvec = "0.6.1"
 servo_media_derive = { path = "../servo-media-derive" }
 
 [dependencies.petgraph]
 version = "0.4.12"
 features = ["stable_graph"]
-
-[dependencies.byte-slice-cast]
-optional = true
-version = "0.1"
 
 [dependencies.gstreamer]
 optional = true
@@ -32,13 +30,9 @@ version = "0.11.2"
 optional = true
 version = "0.11"
 
-[dependencies.num-traits]
-optional = true
-version = "0.1"
-
 [features]
-default = ["gst"]
-gst = ["gstreamer", "gstreamer-audio", "gstreamer-app", "byte-slice-cast", "num-traits"]
+default = []
+gst = ["gstreamer", "gstreamer-audio", "gstreamer-app"]
 
 [lib]
 name = "servo_media"
