--- a/servo-media-gstreamer/Cargo.toml
+++ b/servo-media-gstreamer/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Manish Goregaokar <manishsmail@gmail.com>"]
 
 
+[build-dependencies]
+regex = "1.0"
+zip = "0.3.1"
 
 [dependencies.byte-slice-cast]
 version = "0.1"
