--- a/servo-media-derive/Cargo.toml
+++ b/servo-media-derive/Cargo.toml
@@ -7,5 +7,5 @@ authors = ["Fernando Jiménez Moreno <ferjmoreno@gmail.com>"]
 proc-macro = true
 
 [dependencies]
-syn = "0.11.11"
-quote = "0.3.15"
+syn = { version = "0.14.2", features = ["full"] }
+quote = "0.6.3"
