Turn off gstreamer for non-x86

--- a/servo-media/Cargo.toml
+++ b/servo-media/Cargo.toml
@@ -12,5 +12,5 @@ path = "../audio"
 [dependencies.servo-media-player]
 path = "../player"
 
-[target.'cfg(not(target_os = "android"))'.dependencies.servo-media-gstreamer]
+[target.'cfg(and(not(target_os = "android"), target_arch = "x86"))'.dependencies.servo-media-gstreamer]
 path = "../backends/gstreamer"
