--- a/examples/android/lib/Cargo.toml
+++ b/examples/android/lib/Cargo.toml
@@ -8,7 +8,7 @@ authors = ["Fernando Jiménez Moreno <ferjmoreno@gmail.com>"]
 crate-type = ["cdylib"]
 
 [dependencies]
-servo_media = { path = "../../.." }
+servo-media = { path = "../../../servo-media" }
 
 [target.'cfg(target_os="android")'.dependencies]
 jni = { version = "0.5", default-features = false }
