Add example for panner

--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -31,6 +31,10 @@ name = "offline"
 path = "offline_context.rs"
 
 [[bin]]
+name = "panner"
+path = "panner.rs"
+
+[[bin]]
 name = "params"
 path = "params.rs"
 
