--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -12,6 +12,7 @@ time = "0.1.40"
 servo-media = { path = "../servo-media" }
 webrender = { git = "https://github.com/servo/webrender/" }
 winit = "0.16.2"
+ipc-channel = "0.10"
 
 [[bin]]
 name = "audio_decoder"
