--- a/player/Cargo.toml
+++ b/player/Cargo.toml
@@ -7,3 +7,8 @@ license = "MPL-2.0"
 
 [lib]
 name = "servo_media_player"
+
+[dependencies]
+serde = "1.0"
+serde_derive = "1.0"
+ipc-channel = "0.10"
