--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,13 @@ addons:
       - libpulse-dev
       - pulseaudio
       - dbus-x11
+      - gstreamer1.0-plugins-base
 
 before_install:
   - curl -L https://github.com/ferjm/gstreamer-1.14.1-ubuntu-trusty/raw/master/gstreamer.tar.gz | tar xz
   - sed -i "s;prefix=/root/gstreamer;prefix=$PWD/gstreamer;g" $PWD/gstreamer/lib/x86_64-linux-gnu/pkgconfig/*.pc
   - export PKG_CONFIG_PATH=$PWD/gstreamer/lib/x86_64-linux-gnu/pkgconfig
-  - export GST_PLUGIN_SYSTEM_PATH=$PWD/gstreamer/lib/x86_64-linux-gnu/gstreamer-1.0
+  - export GST_PLUGIN_SYSTEM_PATH=$GST_PLUGIN_SYSTEM_PATH:/usr/lib/x86_64-linux-gnu/gstreamer-1.0:$PWD/gstreamer/lib/x86_64-linux-gnu/gstreamer-1.0
   - export GST_PLUGIN_SCANNER=$PWD/gstreamer/libexec/gstreamer-1.0/gst-plugin-scanner
   - export PATH=$PATH:$PWD/gstreamer/bin
   - export LD_LIBRARY_PATH=$PWD/gstreamer/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH
@@ -26,4 +27,4 @@ before_install:
 
 script:
   - cargo build
-  - ls examples/*.rs | xargs -I{} basename  {} .rs  | RUST_BACKTRACE=1 xargs -I{} cargo ex {}
+  - ls examples/*.rs | xargs -I{} basename  {} .rs  | RUST_BACKTRACE=1 GST_DEBUG=3 xargs -I{} cargo ex {}
