Add serde impls for Block

--- a/audio/Cargo.toml
+++ b/audio/Cargo.toml
@@ -10,6 +10,8 @@ name = "servo_media_audio"
 [dependencies]
 boxfnonce = "0.1"
 euclid = "0.19.0"
+serde_derive = "1.0.66"
+serde = "1.0.66"
 servo_media_derive = { path = "../servo-media-derive" }
 smallvec = "0.6.1"
 
