--- a/audio/Cargo.toml
+++ b/audio/Cargo.toml
@@ -8,9 +8,10 @@ version = "0.1.0"
 name = "servo_media_audio"
 
 [dependencies]
-smallvec = "0.6.1"
-servo_media_derive = { path = "../servo-media-derive" }
+boxfnonce = "0.1"
 euclid = "0.19.0"
+servo_media_derive = { path = "../servo-media-derive" }
+smallvec = "0.6.1"
 
 [dependencies.petgraph]
 version = "0.4.12"
