--- a/audio/Cargo.toml
+++ b/audio/Cargo.toml
@@ -14,6 +14,7 @@ serde_derive = "1.0.66"
 serde = "1.0.66"
 servo_media_derive = { path = "../servo-media-derive" }
 smallvec = "0.6.1"
+log = "0.4.5"
 
 [dependencies.petgraph]
 version = "0.4.12"
