--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -7,13 +7,15 @@ license = "MPL-2.0"
 env_logger = "0.5"
 euclid = "0.19.0"
 gleam = "0.6.0"
-glutin = "0.17.0"
 rand = "0.5.0"
 time = "0.1.40"
 servo-media = { path = "../servo-media" }
 webrender = { git = "https://github.com/servo/webrender/" }
-winit = "0.16.2"
 ipc-channel = "0.11"
+
+[target.'cfg(not(target_os = "android"))'.dependencies]
+winit = "0.16.2"
+glutin = "0.17.0"
 
 [[bin]]
 name = "audio_decoder"
