--- a/servo-media/Cargo.toml
+++ b/servo-media/Cargo.toml
@@ -12,5 +12,8 @@ path = "../audio"
 [dependencies.servo-media-player]
 path = "../player"
 
+[dependencies.servo-media-webrtc]
+path = "../webrtc"
+
 [target.'cfg(any(all(target_os = "android", target_arch = "arm"), target_arch = "x86_64"))'.dependencies.servo-media-gstreamer]
 path = "../backends/gstreamer"
