Update syn and quote

--- a/servo-media-derive/Cargo.toml
+++ b/servo-media-derive/Cargo.toml
@@ -7,5 +7,6 @@ authors = ["Fernando Jiménez Moreno <ferjmoreno@gmail.com>"]
 proc-macro = true
 
 [dependencies]
-syn = "0.13.1"
-quote = "0.5.1"
+syn = "0.15"
+quote = "0.6"
+proc-macro2 = "0.4"
