--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -15,8 +15,7 @@ serde_derive = "1.0"
 serde_json = "1.0"
 servo-media = { path = "../servo-media" }
 webrender = { git = "https://github.com/servo/webrender/" }
-websocket = "*"
-#ws = "*"
+websocket = "0.20"
 ipc-channel = "0.11"
 
 [target.'cfg(not(target_os = "android"))'.dependencies]
