--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rust:
   - nightly
 os:
   - linux
-dist: trusty
+dist: xenial
 
 matrix:
   include:
@@ -12,23 +12,38 @@ matrix:
       addons:
         apt:
           packages:
-            - libpulse-dev
+            - libasound2-plugins
+            - libfaad2
+            - libfftw3-single3
+            - libjack-jackd2-0
+            - libmms0
+            - libmpg123-0
+            - libopus0
+            - liborc-0.4-0
+            - libpulsedsp
+            - libsamplerate0
+            - libspeexdsp1
+            - libtdb1
+            - libtheora0
+            - libtwolame0
+            - libwebp5
+            - libwebrtc-audio-processing-0
+            - liborc-0.4-dev
             - pulseaudio
             - pulseaudio-utils
-            - dbus-x11
-      services:
-        - pulseaudio
 
       before_install:
-        - curl -L http://servo-deps.s3.amazonaws.com/gstreamer/gstreamer-x86_64-linux-gnu.tar.gz | tar xz
+        - curl -L http://servo-deps.s3.amazonaws.com/gstreamer/gstreamer-1.14-x86_64-linux-gnu.20190212.tar.gz | tar xz
         - sed -i "s;prefix=/root/gstreamer;prefix=$PWD/gstreamer;g" $PWD/gstreamer/lib/x86_64-linux-gnu/pkgconfig/*.pc
         - export PKG_CONFIG_PATH=$PWD/gstreamer/lib/x86_64-linux-gnu/pkgconfig
-        - export GST_PLUGIN_SYSTEM_PATH=$GST_PLUGIN_SYSTEM_PATH:/usr/lib/x86_64-linux-gnu/gstreamer-1.0:$PWD/gstreamer/lib/x86_64-linux-gnu/gstreamer-1.0
+        - export GST_PLUGIN_SYSTEM_PATH=$PWD/gstreamer/lib/x86_64-linux-gnu/gstreamer-1.0
         - export GST_PLUGIN_SCANNER=$PWD/gstreamer/libexec/gstreamer-1.0/gst-plugin-scanner
         - export PATH=$PATH:$PWD/gstreamer/bin
         - export LD_LIBRARY_PATH=$PWD/gstreamer/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH
-        - export DISPLAY=:99.0;
-        - /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1400x900x24 -ac +extension GLX +render -noreset;
+
+      before_script:
+        - pulseaudio --start
+        - gst-inspect-1.0 | grep Total
 
       script:
         - cargo build
