--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rust:
   - nightly
 os:
   - linux
-dist: xenial
+dist: trusty
 
 matrix:
   include:
@@ -26,6 +26,7 @@ matrix:
             - libtdb1
             - libtheora0
             - libtwolame0
+            - libwayland-egl1-mesa
             - libwebp5
             - libwebrtc-audio-processing-0
             - liborc-0.4-dev
@@ -33,13 +34,13 @@ matrix:
             - pulseaudio-utils
 
       before_install:
-        - curl -L http://servo-deps.s3.amazonaws.com/gstreamer/gstreamer-1.14-x86_64-linux-gnu.20190212.tar.gz | tar xz
-        - sed -i "s;prefix=/root/gstreamer;prefix=$PWD/gstreamer;g" $PWD/gstreamer/lib/x86_64-linux-gnu/pkgconfig/*.pc
-        - export PKG_CONFIG_PATH=$PWD/gstreamer/lib/x86_64-linux-gnu/pkgconfig
-        - export GST_PLUGIN_SYSTEM_PATH=$PWD/gstreamer/lib/x86_64-linux-gnu/gstreamer-1.0
-        - export GST_PLUGIN_SCANNER=$PWD/gstreamer/libexec/gstreamer-1.0/gst-plugin-scanner
-        - export PATH=$PATH:$PWD/gstreamer/bin
-        - export LD_LIBRARY_PATH=$PWD/gstreamer/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH
+        - curl -L http://servo-deps.s3.amazonaws.com/gstreamer/gstreamer-1.14-x86_64-linux-gnu.20190213.tar.gz | tar xz
+        - sed -i "s;prefix=/opt/gst;prefix=$PWD/gst;g" $PWD/gst/lib/pkgconfig/*.pc
+        - export PKG_CONFIG_PATH=$PWD/gst/lib/pkgconfig
+        - export GST_PLUGIN_SYSTEM_PATH=$PWD/gst/lib/gstreamer-1.0
+        - export GST_PLUGIN_SCANNER=$PWD/gst/libexec/gstreamer-1.0/gst-plugin-scanner
+        - export PATH=$PATH:$PWD/gst/bin
+        - export LD_LIBRARY_PATH=$PWD/gst/lib:$LD_LIBRARY_PATH
 
       before_script:
         - pulseaudio --start
