Invert dependency graph so backends are chosen by the consumer when instantiating the media stack.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [workspace]
 members = [
   "audio",
+  "backends/auto",
+  "backends/dummy",
   "backends/gstreamer",
   "examples",
   "examples/android/lib",
