--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -13,6 +13,8 @@ time = "0.1.40"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+servo-media-dummy = { path = "../backends/dummy" }
+servo-media-auto = { path = "../backends/auto" }
 servo-media = { path = "../servo-media" }
 webrender = "0.58.0"
 websocket = "0.20"
@@ -21,6 +23,10 @@ ipc-channel = "0.11"
 [target.'cfg(not(target_os = "android"))'.dependencies]
 winit = "0.18"
 glutin = { git = "https://github.com/tomaka/glutin" }
+
+[[bin]]
+name = "dummy"
+path = "dummy.rs"
 
 [[bin]]
 name = "audio_decoder"
