--- a/examples/android/lib/Cargo.toml
+++ b/examples/android/lib/Cargo.toml
@@ -10,3 +10,4 @@ crate-type = ["cdylib"]
 [target.'cfg(target_os="android")'.dependencies]
 jni = { version = "0.5", default-features = false }
 servo-media = { path = "../../../servo-media" }
+servo-media-auto = { path = "../../../backends/auto" }
