--- a/backends/gstreamer/Cargo.toml
+++ b/backends/gstreamer/Cargo.toml
@@ -23,6 +23,9 @@ version = "0.8"
 [dependencies.gstreamer-sys]
 version = "0.7"
 
+[dependencies.gstreamer-sdp-sys]
+version = "0.7"
+
 [dependencies.gstreamer]
 version = "0.13"
 features = ["subclassing"]
