Workaround missing cargo target-specific features for gstreamer-gl

--- a/backends/gstreamer/Cargo.toml
+++ b/backends/gstreamer/Cargo.toml
@@ -48,11 +48,12 @@ version = "0.13"
 [dependencies.gstreamer-video]
 version = "0.13"
 
-[target.'cfg(not(target_os = "linux"))'.dependencies]
-gstreamer-gl = { version = "0.13" }
+[dependencies.gstreamer-gl]
+version = "0.13"
+features = []
 
 [target.'cfg(target_os = "linux")'.dependencies]
-gstreamer-gl = { version = "0.13", features = ["egl"] }
+gstreamer-gl-egl = { path = "../gstreamer-gl-egl"}
 
 [dependencies.ipc-channel]
 version = "0.11"
