Revert "Workaround missing cargo target-specific features for gstreamer-gl"
This reverts commit 894ae134a72ccd61bff099706662782b9a8a24da.

--- a/backends/gstreamer/Cargo.toml
+++ b/backends/gstreamer/Cargo.toml
@@ -48,12 +48,11 @@ version = "0.13"
 [dependencies.gstreamer-video]
 version = "0.13"
 
-[dependencies.gstreamer-gl]
-version = "0.13"
-features = []
+[target.'cfg(not(target_os = "linux"))'.dependencies]
+gstreamer-gl = { version = "0.13" }
 
 [target.'cfg(target_os = "linux")'.dependencies]
-gstreamer-gl-egl = { path = "../gstreamer-gl-egl"}
+gstreamer-gl = { version = "0.13", features = ["egl"] }
 
 [dependencies.ipc-channel]
 version = "0.11"
