--- a/player/Cargo.toml
+++ b/player/Cargo.toml
@@ -12,3 +12,6 @@ name = "servo_media_player"
 serde = "1.0.66"
 serde_derive = "1.0.66"
 ipc-channel = "0.11"
+
+[dependencies.servo-media-streams]
+path = "../streams"
