Create a GStreamerRender trait
This new trait is implemented by the possible renders, mainly the
OpenGL-based ones, where the video sink and frames are build.

A dummy render is defined by default.

--- a/backends/gstreamer/Cargo.toml
+++ b/backends/gstreamer/Cargo.toml
@@ -75,3 +75,6 @@ path = "../../streams"
 
 [dependencies.servo-media-webrtc]
 path = "../../webrtc"
+
+[dependencies.servo-media-gstreamer-render]
+path = "render"
