--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
   "backends/auto",
   "backends/dummy",
   "backends/gstreamer",
+  "backends/gstreamer/render",
   "examples",
   "examples/android/lib",
   "player",
