--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -21,8 +21,8 @@ websocket = "0.20"
 ipc-channel = "0.11"
 
 [target.'cfg(not(target_os = "android"))'.dependencies]
-winit = "0.18"
-glutin = { git = "https://github.com/tomaka/glutin" }
+winit = "0.19"
+glutin = "0.20"
 
 [[bin]]
 name = "dummy"
