--- a/backends/gstreamer/Cargo.toml
+++ b/backends/gstreamer/Cargo.toml
@@ -78,3 +78,6 @@ path = "../../webrtc"
 
 [dependencies.servo-media-gstreamer-render]
 path = "render"
+
+[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
+servo-media-gstreamer-render-unix = { path = "render-unix" }
