Handle buffer offset in servosrc
Seeking requires a strict handling of each buffer offset. Though
appsrc do some offset handling, but only for live stream (not
seeking). When random-access is enabled the application must take care
of marking each buffer offset correctly.

This patch extends servosrc's method push_buffer() so it will count
the current offset and stamps it on the pushed buffer. Also, it honors
the buffer's block size defined in appsrc, splitting the input data in
several buffers if it's bigger, fixing some problems with the
buffering mechanism in playbin.

When a seek operation is done, the current media offset must be
updated with the requested position.

As per media/player design, it is required that the user must push
synchronized the data from the requested position by the seek.

--- a/backends/gstreamer/Cargo.toml
+++ b/backends/gstreamer/Cargo.toml
@@ -41,6 +41,9 @@ version = "0.13"
 [dependencies.gstreamer-audio]
 version = "0.13"
 
+[dependencies.gstreamer-base]
+version = "0.13"
+
 [dependencies.gstreamer-player]
 version = "0.13"
 
