--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -103,3 +103,7 @@ path = "simple_webrtc.rs"
 [[bin]]
 name = "set_value_curve"
 path = "set_value_curve.rs"
+
+[[bin]]
+name = "stereo_panner"
+path = "stereo_panner.rs"
