--- a/backends/gstreamer/render-unix/Cargo.toml
+++ b/backends/gstreamer/render-unix/Cargo.toml
@@ -15,7 +15,7 @@ version = "0.14"
 
 [dependencies.gstreamer-gl]
 version = "0.14"
-features = ["egl"]
+features = ["x11", "egl", "wayland"]
 
 [dependencies.gstreamer-video]
 version = "0.14"
