--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 license = "MPL-2.0"
 
 [dependencies]
+clap = { version = "2.33", default-features = false }
 euclid = "0.19.0"
 gleam = "0.6.8"
 hyper = "0.12"
