--- a/backends/gstreamer/render/Cargo.toml
+++ b/backends/gstreamer/render/Cargo.toml
@@ -10,6 +10,9 @@ path = "lib.rs"
 [dependencies.gstreamer]
 version = "0.14"
 
+[dependencies.gstreamer-gl]
+version = "0.14"
+
 [dependencies.gstreamer-video]
 version = "0.14"
 
