--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -5,7 +5,7 @@ license = "MPL-2.0"
 
 [dependencies]
 euclid = { version = "0.19.0", optional = true }
-failure = { version = "0.1", opional = true }
+failure = { version = "0.1", optional = true }
 failure_derive = { version = "0.1", optional = true }
 gleam = { version = "0.6.8", optional = true }
 hyper = { version = "0.12", optional = true }
