GL support for Windows

--- a/backends/gstreamer/Cargo.toml
+++ b/backends/gstreamer/Cargo.toml
@@ -90,3 +90,7 @@ servo-media-gstreamer-render-unix = { path = "render-unix", features = ["gl-egl"
 
 [target.'cfg(any(target_os = "android"))'.dependencies]
 servo-media-gstreamer-render-android = { path = "render-android" }
+
+[target.'cfg(target_os = "windows")'.dependencies]
+servo-media-gstreamer-render-windows = { path = "render-windows" }
+
