--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -6,10 +6,10 @@ license = "MPL-2.0"
 [dependencies]
 euclid = { version = "0.19.0", optional = true }
 failure = { version = "0.1", optional = true }
-failure_derive = { version = "0.1", optional = true }
+failure_derive = { version = "0.1", optional = true}
 gleam = { version = "0.6.8", optional = true }
 rand = { version = "0.5.0", optional = true }
-time = { version = "0.1.40", optional = true }
+time = { version = "0.1.40" }
 serde = {version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
 serde_json = { version = "1.0", optional = true }
