Do not set render-unix features based on target OS

--- a/backends/gstreamer/Cargo.toml
+++ b/backends/gstreamer/Cargo.toml
@@ -86,7 +86,7 @@ path = "../../webrtc"
 path = "render"
 
 [target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
-servo-media-gstreamer-render-unix = { path = "render-unix", features = ["gl-egl", "gl-x11"] }
+servo-media-gstreamer-render-unix = { path = "render-unix" }
 
 [target.'cfg(any(target_os = "android"))'.dependencies]
 servo-media-gstreamer-render-android = { path = "render-android" }
