--- a/backends/gstreamer/render-macos/bindings/Cargo.toml
+++ b/backends/gstreamer/render-macos/bindings/Cargo.toml
@@ -2,14 +2,10 @@
 name = "servo-media-gst-gl-macos-bindings"
 version = "0.1.0"
 authors = ["The Servo Project Developers"]
-build = "build.rs"
 
 [lib]
 name = "servo_media_gst_gl_macos_bindings"
 path = "lib.rs"
-
-[build-dependencies]
-pkg-config = "0.3.7"
 
 [dependencies]
 glib = "0.8"
@@ -17,4 +13,7 @@ glib-sys = "0.9"
 gstreamer = "0.14"
 gstreamer-sys = "0.8"
 gstreamer-gl = "0.14"
-gstreamer-gl-sys = "0.8"
+servo-media-gst-gl-macos-bindings-sys = { path = "../bindings-sys" }
+
+[features]
+v1_16 = ["servo-media-gst-gl-macos-bindings-sys/v1_16"]
