fix configuration for android

--- a/backends/gstreamer/Cargo.toml
+++ b/backends/gstreamer/Cargo.toml
@@ -88,5 +88,5 @@ path = "render"
 [target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
 servo-media-gstreamer-render-unix = { path = "render-unix", features = ["gl-egl", "gl-x11"] }
 
-[target.'cfg(any(target_os = "android"))'.dependencies]
+[target.'cfg(target_os = "android")'.dependencies]
 servo-media-gstreamer-render-android = { path = "render-android" }
